2010-05-03  Chong Yidong  <cyd@stupidchicken.com>

	* diff.el (diff-sentinel):

	* epg.el (epg--make-temp-file, epg-decrypt-string)
	(epg-verify-string, epg-sign-string, epg-encrypt-string):

	* jka-compr.el (jka-compr-partial-uncompress)
	(jka-compr-call-process, jka-compr-write-region, jka-compr-load):

	* server.el (server-sentinel): Use delete-file's new FORCE arg
	(Bug#6070).

2010-05-03  Stefan Monnier  <monnier@iro.umontreal.ca>

	Use define-minor-mode where applicable.
	* view.el (view-mode):
	* type-break.el (type-break-query-mode)
	(type-break-mode-line-message-mode):
	* textmodes/reftex.el (reftex-mode):
	* term/vt100.el (vt100-wide-mode):
	* tar-mode.el (tar-subfile-mode):
	* savehist.el (savehist-mode):
	* ibuf-ext.el (ibuffer-auto-mode):
	* composite.el (auto-composition-mode):
	* progmodes/vhdl-mode.el (vhdl-electric-mode, vhdl-stutter-mode):
	Use define-minor-mode.
	(vhdl-mode): Use static mode-line format.
	(vhdl-mode-line-update): Delete.
	(vhdl-create-mode-menu, vhdl-activate-customizations)
	(vhdl-hs-minor-mode): Don't bother calling it.

2010-05-02  Stefan Monnier  <monnier@iro.umontreal.ca>

	* simple.el (with-wrapper-hook): Move.
	(buffer-substring-filters): Mark obsolete.
	(filter-buffer-substring-functions): New variable.
	(filter-buffer-substring): Use it.  Remove unused arg `noprops'.

	Use a mode-line spec rather than a static string in Semantic.
	* cedet/semantic/util-modes.el:
	(semantic-minor-modes-format): New var to replace...
	(semantic-minor-modes-status): Remove.
	(semantic-mode-line-update): Construct a mode-line spec rather than
	a static string so that mouse buttons can be used on individual minor
	modes and so that semantic-mode-line-update only needs to be called
	when global settings are changed.
	(semantic-add-minor-mode, semantic-toggle-minor-mode-globally):
	Call semantic-mode-line-update.
	(semantic-toggle-minor-mode-globally): Don't assume mode is on
	minor-mode-alist, check semantic-minor-mode-alist as well.